Assure larger PermGen size to avoid PermGen errors on some environment.